--- a/tootoo-templates/hamburger-theme/hamburger-theme-2018-07-30.html
+++ b/tootoo-templates/hamburger-theme/hamburger-theme-2018-07-30.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="View all the files on Ladybug Tools / Spider with this basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more." >
+<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
-<title>Spider</title>
+<title>hamburger theme r1.0</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -37,7 +37,8 @@
 
 	body, html { font: 12pt "Trebuchet MS", helvetica, sans-serif; height: 100%; margin: 0; }
 
-	button, input[ type=button ] { background-color: #ddd; border: none;
+	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
+
 	iframe { border: none; width: 100%; }
 
 	input[ type = range ] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 100%; }
@@ -58,24 +59,13 @@
 	<div id = "divMenu" class="jumbotron" >
 
 		<div>
-			<a class="breadcrumb-item" href = "../index.html" target="_top" >Ladybug Tools</a>
+			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
+			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
 		</div>
 
 		<div id = "divTitle" ></div>
 
-		<div id = "divBreadcrumbs" ></div>
-
 		<div id = "divMenuItems" ></div>
-
-		<hr>
-
-		<p>Click any <a href="" >
-			<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>
-		</a> icon to view source code on GitHub.
-
-		<p>Click any &#x2750; icon to go full screen & get link to individual file.</p>
-
-		<p>Tooltips provide file size.</p>
 
 		<div id = "divExtras" ></div>
 
@@ -90,11 +80,11 @@
 
 			<details>
 
-				<summary>Themes</summary>
+					<summary>Settings</summary>
 
-				<div id=divBootswatch ></div>
+					<div id=divBootswatch ></div>
 
-				<div id=divCssOthers ></div>
+					<div id=divCssOthers ></div>
 
 			</details>
 
@@ -115,7 +105,7 @@
 
 			</details>
 
-			<h3 onclick="divMenu.scrollTop=0;" style="cursor:pointer;text-align:center;" title="go to top of page" > &#x2766; </h3>
+			<h3 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of page' > &#x2766; </h3>
 
 		</div>
 
@@ -127,7 +117,7 @@
 
 	</div>
 
-	<button id = "hamburger" class = "btn btn-primary" onclick=toggleNav(); > slide &#9776; </button>
+	<button id = "hamburger" class = "btn btn-primary" onclick=toggleNav(); > slide &#9776;  </button>
 
 <script>
 
@@ -135,24 +125,9 @@
 // jshint esversion: 6
 
 
-const user = 'ladybug-tools';
-const repo = '/spider';
-const pathRepo = '';
-const branch = '/master/'
-
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
-
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage = '';
-//console.log( 'urlGitHubPage', urlGitHubPage );
-
-
 //	location.hash = '../README.md';
 const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/ladybug-tools/spider/";
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
 
 let themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 
@@ -163,14 +138,24 @@ let yDown = null;
 init();
 
 
-
 function init() {
 
 	updateCss( themeName );
 
-	setTitle( divTitle );
+	divTitle.innerHTML =
+
+	`<h2>
+		<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+		<a href = "" title = "Click to reload this page" >${document.title}</a>
+	</h2>
+
+	<p>
+		${ document.head.querySelector( '[name=description]' ).content }
+	</p>`;
 
 	setTestingExtras( divExtras );
+
+	setTheme();
 
 	dragDropArea.addEventListener( "dragover", function( event ){ event.preventDefault(); }, true );
 	dragDropArea.addEventListener( 'drop', onDrop, false );
@@ -187,11 +172,39 @@ function init() {
 
 
 
-function updateCss( link ) {
+function setTestingExtras( target ) {
 
-	themeName = css.href = link;
-	localStorage.setItem( 'themeName', link );
-	setTheme();
+	const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
+
+	target.innerHTML =
+
+	`<details open >
+
+		<summary>Extras</summary>
+
+		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-github-issues.html" >view-github-issues.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-stl.html" >view-stl.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
+
+		<p><a href="https://bootswatch.com" target=_blank >&#x2750; bootswatch.com</a></p>
+
+	</details>
+
+	<details>
+
+		<summary>Text</summary>
+
+		${ txt }
+
+		<hr>
+
+	</details>`;
 
 }
 
@@ -264,57 +277,11 @@ function setTheme( target ) {
 
 
 
-function setTitle( target ) {
+function updateCss( link ) {
 
-	target.innerHTML =
-
-	`<h2>
-		<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
-		<a href = "" title = "Click to reload this page" >${document.title}</a>
-	</h2>
-
-	<p>
-		${ document.head.querySelector( '[name=description]' ).content }
-	</p>`;
-
-}
-
-
-
-function setTestingExtras( target ) {
-
-	const txt = '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?<p>';
-
-	target.innerHTML =
-
-	`<details open >
-
-		<summary>Extras</summary>
-
-		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/view-github-issues.html" >view-github-issues.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/view-stl.html" >view-stl.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
-
-		<p><a href="https://bootswatch.com" target=_blank >&#x2750; bootswatch.com</a></p>
-
-	</details>
-
-	<details>
-
-		<summary>Text</summary>
-
-		${ txt }
-
-		<hr>
-
-	</details>
-	<br>`;
+	themeName = css.href = link;
+	localStorage.setItem( 'themeName', link );
+	setTheme();
 
 }
 
@@ -324,12 +291,6 @@ function onHashChange() {
 
 	const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
 	const ulc = url.toLowerCase();
-
-	const crumbs = url.slice( urlGitHubPage.length );
-	const pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
-	//console.log( 'pathCurrent',  pathCurrent );
-
-	setMenuGitHubPathFileNames( pathCurrent );
 
 	if ( ulc.endsWith( '.md' ) ) {
 
@@ -566,131 +527,6 @@ function toggleNav() {
 		divContainer.style.marginLeft = width;
 
 	}
-
-}
-
-
-
-//////////
-
-function setMenuGitHubPathFileNames( path = '' ) {
-
-	const url = urlGitHubApiContents + path;
-
-	requestFile( url, callbackGitHubPathFileNames );
-
-	setBreadcrumbs( path );
-
-}
-
-
-
-function callbackGitHubPathFileNames( xhr ) {
-
-	const response = xhr.target.response;
-	const items = JSON.parse( response );
-	const len = pathRepo.length;
-
-	let txt = '';
-
-	if ( items.message ) { console.log( items.message ); return; }
-
-	const ignoreFolders = [ 'data' ]; //, 'plugins'
-
-	for ( let item of items ) {
-
-		if ( item.type === 'dir' ) {
-
-			if ( ignoreFolders.includes( item.name ) ) { continue; }
-
-			txt +=
-				'<div style=margin-bottom:8px; >' +
-					'<a href=JavaScript:setMenuGitHubPathFileNames("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
-						item.name  +
-					'</a>' +
-				'</div>' +
-			'';
-
-		}
-
-	}
-
-	const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html' ];
-
-	for ( let item of items ) {
-
-		if ( item.type === 'file' ) {
-
-			if ( ignoreFiles.includes( item.name ) ) { continue; }
-
-			itemPath = encodeURI( item.path.slice( len ) );
-
-			txt += // try grid or flexbox??
-				'<table><tr>' +
-
-					'<td><a href="' + urlGitHubSource + '/blob' + branch + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
-					'<td>' +
-
-						'<a href=#' + urlGitHubPage + pathRepo + itemPath +
-						' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
-						( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
-
-					'</td>' +
-
-				'</tr></table>';
-
-			// simplify
-			if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-				//&& item.path !== 'README.md'
-				&& item.name.toLowerCase() === 'readme.md' ) {
-
-				location.hash = urlGitHubPage + pathRepo + itemPath;
-
-			}
-
-		}
-
-	}
-
-	divMenuItems.innerHTML = txt;
-
-}
-
-
-
-function setBreadcrumbs( path ) {
-
-	let txt =
-		'<b>' +
-			'<a href=JavaScript:setMenuGitHubPathFileNames(); >' +
-
-				( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
-
-			'</a> &raquo; ' +
-		'</b>';
-
-	const folders = path ? path.split( '/' ) : [] ;
-
-	let str = '';
-
-	for ( let folder of folders ) {
-
-		str += folder + '/';
-
-		txt += '<b><a href=JavaScript:setMenuGitHubPathFileNames("' + str.slice( 0, -1 ) + '"); >' + folder + '</a> &raquo; </b>';
-
-	}
-
-	divBreadcrumbs.innerHTML = txt;
-
-}
-
-
-
-function setGPATStorage() {
-
-	const GitHubPersonalAccessToken = inpGitHubPersonalAccessToken.value;
-	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
 
 }
 
