--- a/tootoo-templates/hamburger-theme/hamburger-theme.html
+++ b/tootoo-templates/hamburger-theme/hamburger-theme.html
@@ -10,7 +10,7 @@
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
-	:root { --mnu-width: 20rem; font-size: 1em; }
+	:root { --mnu-width: 20rem; font-size: 0.9em; }
 
 	html { height: 100%; margin: 0; }
 
@@ -80,7 +80,7 @@
 
 			<details>
 
-				<summary>Settings</summary>
+				<summary>Themes</summary>
 
 				<div id=divBootswatch ></div>
 
@@ -210,6 +210,7 @@ function setTheme( target ) {
 
 
 	const txt1 = themesBootswatch.map( theme => {
+
 		const name = Object.keys( theme )[ 0 ];
 		link = name === 'Default' ?
 			'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css' :
@@ -250,45 +251,6 @@ function setTitle( target ) {
 	<p>
 		${ document.head.querySelector( '[name=description]' ).content }
 	</p>`;
-
-}
-
-
-
-function setTestingExtras( target ) {
-
-	const txt = '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?<p>';
-
-	target.innerHTML =
-
-	`<details open >
-
-		<summary>Extras</summary>
-
-		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/view-github-issues.html" >view-github-issues.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io/plugins/view-stl.html" >view-stl.html</a></p>
-
-		<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
-
-		<p><a href="https://bootswatch.com" target=_blank >&#x2750; bootswatch.com</a></p>
-
-	</details>
-
-	<details>
-
-		<summary>Text</summary>
-
-		${ txt }
-
-		<hr>
-
-	</details>
-	<br>`;
 
 }
 
@@ -387,7 +349,7 @@ function onDrop( event ) {
 
 	event.preventDefault();
 
-};
+}
 
 
 
@@ -446,7 +408,7 @@ function openFile( files ) {
 
 		}
 
-};
+}
 
 
 
