--- a/tootoo-templates/z-templates-readme/readme-template.html
+++ b/tootoo-templates/z-templates-readme/readme-template.html
@@ -35,7 +35,7 @@
 		console.log( 'hash', hash );
 		path = hash.replace( /-/g, '' ).replace( /\w+/g, '..' );
 
-		pathFull = path + '/index.html#' + hash + '/README-template-short.md';
+		pathFull = path + '/index.html#' + hash + '/README-template.md';
 
 	}
 
